# pyprop

./: README.md  environment.yml  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/: paga.py  propagator.py  tomopy_phase.py
src/pyprop/: OpticsElements.py  __init__.py  models.py  paga.py  propagator.py  rw.py  tomopy_phase.py  wrapper_fftw.py
src/pyprop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyprop/pyprop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: FAXTOR_TEST.py  FaxtorJupyter.ipynb  PropagatedWIRE30keVNoNoise2.3000m.tif  originalwire.tif  testprop.py
